--- a/public/styles/theme.css
+++ b/public/styles/theme.css
@@ -1,13 +1,30 @@
+/*--> REQUIRING CUSTOM FONTS <--*/
+@font-face {
+    font-family: "fira-code";
+    src: url("./font-families/Fira Code Bold 700.ttf") format("truetype");
+}
+@font-face {
+    font-family: "Dosis";
+    src: url("./font-families/Dosis Bold 700.ttf") format("truetype");
+}
+@font-face {
+    font-family: "Roboto";
+    src: url("../font-families/Roboto-Bold.ttf") format("truetype");
+}
+
+/*--> REQUIRING CUSTOM FONTS <--*/
 #editor {
-    font-size: 15px;
-    font-weight: 900;
-    line-height: 2.2rem;
-    letter-spacing: 1px;
+    font-size: 14px;
+    line-height: 2rem;
     background: black;
     overflow-x: auto;
     white-space: pre;
     border: 0.1px solid #fff;
     border-style: dashed;
+    font-family: Arial, sans-serif;
+    font-weight: 900 !important;
+    word-spacing: 1px;
+    padding-right: 10px!important;
 }
 
 /* Optional: Custom scrollbar styles */
@@ -39,9 +56,10 @@
 .ace_keyword {
     color: #ff1313 !important;
     background: #fc003539 !important;
+    /*
     border: 0.1px solid #e42d0087 !important;
     border-style: dashed;
-    padding: 1px 0;
+    padding: 0.1px 0; */
     border-radius: 5px;
     font-weight: 900 !important;
 }
@@ -49,29 +67,32 @@
     color: #007fe4 !important;
     background: #007fe435;
     font-weight: 900 !important;
-    padding: 1px 0;
+    /* padding: 1px 0;
     margin: 0;
     border-radius: 5px;
     border: 0.1px solid #007fe487;
-    border-style: dashed;
+    border-style: dashed; */
 }
 .ace_function {
     color: #00dc02 !important;
     background: #0bd81d35;
     font-weight: 900 !important;
-    padding: 1px 0;
+    /* padding: 1px 0;
     margin: 0;
     border-radius: 5px;
     border: 0.1px solid #00dc02;
-    border-style: dashed;
+    border-style: dashed; */
 }
+/*
 .ace_rparen,
 .ace_lparen {
     border: 0.1px solid #ffffff;
     border-style: dashed;
     border-radius: 5px;
     padding: 1px 0;
+    text-align: center;
 }
+*/
 .ace_parameter {
     color: #ff7014;
 }
@@ -83,11 +104,10 @@
 /* Cursor styling with animation */
 #editor .ace_cursor {
     border-left: 2px solid #31ffcf; /* Vibrant blue cursor */
-    animation: blink 0.8s step-end infinite; /* Blinking effect */
+    /* animation: blink 0.8s step-end infinite; */ /* Blinking effect */
 }
 @keyframes blink {
     50% {
         opacity: 0;
     }
 }
-
