--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -4,7 +4,15 @@
     box-sizing: border-box;
     /* font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; */
 }
-
+:root {
+    --kali-bg: #0f0f0f;
+    --kali-text: #ffffff;
+    --kali-prompt: #4bffb3;
+    --kali-path: #c11bff;
+    --kali-symbol: #c60900;
+    --kali-output: #a9a9a9;
+    --kali-error: #e20000;
+}
 body {
     display: flex;
     min-height: 100vh;
@@ -30,6 +38,23 @@ header .btn-area {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 1.5rem;
+}
+.btn-area #run-btn {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background: #087900;
+}
+#run-btn i {
+    font-size: 16px;
+}
+header #menu-btn {
+    display: none;
 }
 .btn-area button {
     outline: none;
@@ -39,7 +64,61 @@ header .btn-area {
     font-size: 24px;
     color: #0083c2;
 }
-
+header .tab-bar {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 77%;
+    padding: 0.5rem;
+    padding-right: 1rem;
+    background: #000000;
+    z-index: 90000000;
+    display: flex;
+    align-items: left;
+    justify-content: left;
+    overflow-y: hidden;
+    overflow-x: auto;
+}
+.tab-bar p {
+    display: flex;
+    text-align: left;
+    justify-content: left;
+    align-items: left;
+    margin: 0 0.8rem;
+}
+.tab-bar p span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 15px;
+    max-width: 180px;
+}
+.tab-bar p i {
+    color: #fff;
+    font-weight: 900;
+    font-size: 12px;
+    width: 17px;
+    height: 17px;
+    display: flex;
+    margin-top: 5px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background: #d40000;
+    border-radius: 50%;
+    z-index: 90000000;
+}
+.tab-bar p span i {
+    margin: 0;
+    background: transparent;
+}
+.tab-bar .active {
+    border-bottom: 1px solid #009be7;
+}
 pre {
     position: absolute;
     left: 30%;
@@ -65,6 +144,43 @@ pre {
     user-select: none;
 }
 
+.sidebar .new-project {
+    position: absolute;
+    top: 5rem;
+    left: 0.5rem;
+    display: none;
+    flex-direction: column;
+    width: 90%;
+}
+
+.new-project p {
+    text-align: justify;
+    margin: 0.5rem 0;
+    line-height: 2rem;
+}
+.new-project button {
+    outline: none;
+    border: none;
+    padding: 0.5rem 1rem;
+    background: #0084c4;
+    color: #fff;
+    border-radius: 5px;
+    font-weight: 800;
+    width: 120px;
+    
+}
+.new-project input {
+    outline: none;
+    display: none;
+    border: 1px solid #0084c4;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    margin: 0.5rem 0;
+    width: 180px;
+    background: transparent;
+    color: #fff;
+    font-weight: 900;
+}
 .sidebar .head {
     display: flex;
     justify-content: space-between;
@@ -83,16 +199,17 @@ pre {
     text-transform: uppercase;
     color: #0083c2;
     font-weight: 900;
+    font-size: 15px;
 }
 .head-logo i {
     color: #0083c2;
-    font-size: 19px;
+    font-size: 15px;
 }
 .head .action {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 8px;
+    gap: 10px;
 }
 .head .action button {
     outline: none;
@@ -107,7 +224,7 @@ pre {
     border-radius: 50%;
 }
 .action button i {
-    font-size: 17px;
+    font-size: 15px;
     color: #0083c2;
 }
 /*--> Popup Alert Box <--*/
@@ -154,6 +271,134 @@ pre {
 }
 /*--> Popup Alert Box <--*/
 
+/*Terminal window */
+.terminal-window {
+    position: absolute;
+    width: 70%;
+    height: 60vh;
+    left: 30%;
+    right: 0;
+    bottom: 0;
+    z-index: 9000000000;
+    padding: 20px;
+    box-sizing: border-box;
+    overflow-y: auto;
+    display: none;
+    flex-direction: column;
+    background-color: var(--kali-bg);
+    color: var(--kali-text);
+    font-family: "Courier New", monospace;
+    border: 0.1px solid #fff;
+    border-style: dashed;
+}
+
+.prompt-line {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    margin-bottom: 5px;
+    font-size: 14.8px;
+    font-weight: 800;
+    white-space: pre;
+}
+
+.user,
+.host {
+    color: var(--kali-prompt);
+    font-weight: 900;
+}
+
+.path {
+    font-family: Sans-Serif;
+    color: var(--kali-path);
+    font-weight: 800;
+}
+
+.symbol {
+    color: var(--kali-symbol);
+    margin: 0 5px;
+    font-family: Sans-Serif;
+    font-weight: 900;
+}
+
+#input-container {
+    position: relative;
+    display: inline-block;
+}
+
+#terminal-input {
+    position: absolute;
+    left: 0;
+    top: -1.5px;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    border: none;
+    color: #efff1b;
+    font-family: "Courier New", monospace;
+    font-size: 14px;
+    font-weight: 900;
+    outline: none;
+    caret-color: var(--kali-prompt);
+}
+
+#input-text {
+    display: inline;
+    color: var(--kali-text);
+}
+
+.output {
+    text-align: justify;
+    align-items: left;
+    margin-right: 0;
+    color: var(--kali-output);
+    margin-bottom: 4.8px;
+    /* white-space: pre-wrap;*/
+    font-weight: 800;
+    font-size: 14.5px;
+}
+.output .path {
+    font-family: Sans-Serif;
+}
+
+.error {
+    color: var(--kali-error);
+}
+
+/* Scrollbar styling */
+#terminal::-webkit-scrollbar {
+    width: 10px;
+}
+
+#terminal::-webkit-scrollbar-track {
+    background: var(--kali-bg);
+}
+
+#terminal::-webkit-scrollbar-thumb {
+    background: var(--kali-path);
+    border-radius: 5px;
+}
+.term-active {
+    display: flex;
+    animation: terminal 0.5s linear;
+}
+#terminal #close-cmd {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 28px;
+    height: 28px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background: red;
+    cursor: pointer;
+}
+#close-cmd i {
+    color: #fff;
+    font-weight: 900;
+}
 /*--> Context Menu <--*/
 .context-menu {
     position: absolute;
@@ -236,6 +481,7 @@ pre {
     padding-top: 45px;
     display: flex;
     flex-direction: column;
+    padding-bottom: 100%;
     overflow-x: hidden;
     overflow-y: auto;
     scroll-behavior: smooth;
@@ -357,18 +603,57 @@ pre {
 /*---> Mobile Devices Responsive <---*/
 @media (max-width: 768px) {
     header,
+    .terminal-window,
     pre {
         width: 100%;
         left: 0;
+    }
+    header #menu-btn {
+        display: block;
     }
     .sidebar {
         width: 80%;
         z-index: 900;
         display: none;
+        animation: sidebar 0.2s linear;
     }
     .mobile-menu {
         display: block;
     }
+}
+
+.pre-loader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 9000000;
+    background: #000000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.pre-loader h3 {
+    color: #ffed0e;
+    font-weight: 700;
+    text-align: center;
+    margin: 0.5rem;
+}
+.pre-loader h3 .dot::after {
+    content: "";
+    animation: dots 1s steps(4, end) infinite;
+    font-weight: 900;
+    font-size: 20px;
+    color: #fff;
+}
+
+.pre-loader i {
+    color: #ffffff;
+    font-size: 3.5rem;
+    font-weight: 800;
 }
 
 /* Enabled Dark Theme UI */
@@ -446,4 +731,41 @@ pre {
     background: #011414;
     border: 0.1px solid #fff;
     border-style: dashed;
+}
+
+@keyframes dots {
+    0% {
+        content: "";
+    }
+    25% {
+        content: ".";
+    }
+    50% {
+        content: "..";
+    }
+    75% {
+        content: "...";
+    }
+    85% {
+        content: "....";
+    }
+    100% {
+        content: "";
+    }
+}
+@keyframes sidebar {
+    from {
+        left: -80%;
+    }
+    to {
+        left: 0;
+    }
+}
+@keyframes terminal {
+    from {
+        bottom: -60%;
+    }
+    to {
+        bottom: 0;
+    }
 }
